# pds-dpo

./: README.md  cog.yaml  pyproject.toml
data/step3_sanity/: step3_sanity.json
image_generation_ranking/: run.py
image_generation_ranking/prompts/: sample.txt
llava/train/: llava_trainer.py
pdsdpo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
requirements/: step1_2.txt  step3.txt
response_generation_ranking/: run.py
response_generation_ranking/instruction-prompts/: sample.txt
response_generation_ranking/responses/: mistral-7b.txt  vicuna-13b.txt  vicuna-7b.txt
scripts/: run_dpo.sh  run_dpo_sanity.sh  train_dpo.py
wandb/: latest-run
wandb/offline-run-20260616_143350-nf6a4ckw/: run-nf6a4ckw.wandb
wandb/offline-run-20260616_143350-nf6a4ckw/files/: requirements.txt  wandb-metadata.json
wandb/offline-run-20260616_143711-l4aa5qou/: run-l4aa5qou.wandb
wandb/offline-run-20260616_143711-l4aa5qou/files/: wandb-metadata.json
wandb/offline-run-20260616_143924-7c4hoow7/: run-7c4hoow7.wandb
wandb/offline-run-20260616_143924-7c4hoow7/files/: wandb-metadata.json
