[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdsdpo"
version = "1.2.2.post1"
description = "Multimodal Preference Data Synthetic Alignment with Reward Model"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.1.2", "torchvision==0.16.2",
    "transformers==4.33.0", "tokenizers==0.13.3", "sentencepiece==0.1.99", "shortuuid",
    "accelerate==0.34.0", "peft", "bitsandbytes", "diffusers==0.31.0", "huggingface-hub==0.27.0",
    "pydantic", "markdown2[all]", "numpy", "scikit-learn==1.2.2",
    "gradio==4.16.0", "gradio_client==0.8.1",
    "requests", "httpx==0.24.0", "uvicorn", "fastapi",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13", "trl==0.7.7", "image-reward", "peft==0.6.0", "openai-clip", "protobuf"
]

[project.optional-dependencies]
train = ["deepspeed==0.12.3", "ninja", "wandb"]
build = ["build", "twine"]

[project.urls]
"Homepage" = "https://pds-dpo.github.io"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
